import "client.comm.proto";
package client;

enum OP_CODE
{
	OP_BUY_PHYSICAL					= 1;	// 购买体力
	OP_BUY_COPPER					= 2;	// 购买铜钱
	OP_BUY_CARBON2_TIMES			= 3;	// 重置精英副本次数
	OP_BUY_CHALLANGE_TIMES			= 4;	// 竞技场购买次数
	OP_BUY_SKILL_POINT				= 5;	// 购买技能次数
	OP_RESET_MOUNT_TIMES			= 6;
	OP_RESET_CYCLE_LEVEL			= 7;	// 沙场百战重置
	OP_RESET_DEVIL_LEVEL			= 8;	// 魔化神将
	OP_END							= 9;	// 永远不要这个
}

message recharge_info
{
	required uint32 id = 1;
	required uint32 num = 2;
}

message vip_buy_info_req
{
	required uint32 role_id = 1;	// 随便填
	optional server_head svr_head = 1000;
}

message vip_buy_info_rsp
{
	repeated recharge_info ri = 1;
	required uint32 tick = 2;
}

message vip_exp_req
{
	required uint32 role_id = 1;	// 随便填
	optional server_head svr_head = 1000;
}

message vip_exp_rsp
{
	required uint32 exp = 1;
}

message vip_op_times_req
{
	required OP_CODE op = 1;
	required uint32 raid_id = 2;
	optional server_head svr_head = 1000;
}

message vip_op_times_rsp
{
	required uint32 op = 1;
	required uint32 times = 2;
}

message vip_op_req
{
	required OP_CODE op = 1;
	optional uint32 raid_id = 2;
	optional server_head svr_head = 1000;
}

message vip_op_rsp
{
	enum op_e
	{
		SUCCESS = 0;			// 成功
		VIP_LIMIT = 1;			// VIP等级限制
		TIMES_LIMIT = 2;		// 次数限制
		INGOT_LIMIT = 3;		// 元宝数量不足
		FAILED = 4;				// 失败
	}
	required op_e ret = 1;
	required OP_CODE op = 2;
}

// 服务器内部使用
message vip_op_info
{
	required uint32 op = 1;
	repeated vip_op vo = 2;
}

message vip_op
{
	required uint32 count = 1;
	required uint32 id = 2 [default = 1];
}
